GitVersion1/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <inlineHelpText>Please provide the additional details that are specific to the Project. (for example, date/time, specific to substrate, customer has own email database, etc.)</inlineHelpText>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apparel_Color__c</fullName>
        <description>(Black, White, or Specify Other)</description>
        <inlineHelpText>(Black, White, or Specify Other)</inlineHelpText>
        <label>Apparel Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apparel_Size__c</fullName>
        <description>Small, Med, Large, XL, XXL</description>
        <inlineHelpText>Small, Med, Large, XL, XXL</inlineHelpText>
        <label>Apparel Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BCOrderId__c</fullName>
        <formula>Project_Group__r.BCOrderId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BigCommerce Order Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Customer_Group__c</fullName>
        <formula>Project_Group__r.BC_Customer_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BC Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Order_Product_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>BC Order Product External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BC_Order_Product_ID__c</fullName>
        <label>BC Order Product ID</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand_s_to_Include__c</fullName>
        <label>Brand(s) to Include</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nutrena</fullName>
                </value>
                <value>
                    <fullName>SafeChoice</fullName>
                </value>
                <value>
                    <fullName>ProForce</fullName>
                </value>
                <value>
                    <fullName>Empower</fullName>
                </value>
                <value>
                    <fullName>Triumph</fullName>
                </value>
                <value>
                    <fullName>Stock &amp; Stable</fullName>
                </value>
                <value>
                    <fullName>Nature Smart</fullName>
                </value>
                <value>
                    <fullName>NatureWise</fullName>
                </value>
                <value>
                    <fullName>Country Feeds</fullName>
                </value>
                <value>
                    <fullName>Loyall</fullName>
                </value>
                <value>
                    <fullName>Loyall Life</fullName>
                </value>
                <value>
                    <fullName>River Run</fullName>
                </value>
                <value>
                    <fullName>Record Rack</fullName>
                </value>
                <value>
                    <fullName>Sportsman Choice</fullName>
                </value>
                <value>
                    <fullName>NutreBeef</fullName>
                </value>
                <value>
                    <fullName>Right Now Mineral</fullName>
                </value>
                <value>
                    <fullName>Show Edge</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Cargill</fullName>
                </value>
                <value>
                    <fullName>Progressive</fullName>
                </value>
                <value>
                    <fullName>Sunglo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Milestones__c</fullName>
        <formula>IF(ISPICKVAL( Project_Sub_Type__c , &apos;Fulfillment&apos;), null, (Total_Milestones_Complete__c / Total_Milestones__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Milestones (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Configurable_Fields__c</fullName>
        <description>When creating on our own: Event Date/Time, Location, Special Details, Size of Piece, Coupon Expiration, Ad Dimensions,</description>
        <inlineHelpText>When creating on our own: Event Date/Time, Location, Special Details, Size of Piece, Coupon Expiration, Ad Dimensions,</inlineHelpText>
        <label>Configurable Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>Project_Group__r.Account__r.Name</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Option__c</fullName>
        <label>Design Option</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <label>Designer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_Fit_Size__c</fullName>
        <label>Flex Fit Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item__c</fullName>
        <label>Fulfillment Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_of_the_POS__c</fullName>
        <label>Goal of Piece</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_to_approach_the_target_audience__c</fullName>
        <label>Summary of results</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image_Option__c</fullName>
        <label>Image Option</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imprint_Placement__c</fullName>
        <description>Where do the Brand, Retailer Logo, and Imprint Text go- (left chest, right chest, sleeve, back, etc)</description>
        <inlineHelpText>Where do the Brand, Retailer Logo, and Imprint Text go- (left chest, right chest, sleeve, back, etc)</inlineHelpText>
        <label>Imprint Placement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imprint_Text__c</fullName>
        <description>Any Text that needs to appear (not logos)</description>
        <inlineHelpText>Any Text that needs to appear (not logos)</inlineHelpText>
        <label>Imprint Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imprint_Type__c</fullName>
        <description>Embroided, Screen Print, Iron-on, Embroidered Patch</description>
        <inlineHelpText>Embroided, Screen Print, Iron-on, Embroidered Patch</inlineHelpText>
        <label>Imprint Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Hands_Date_Requested__c</fullName>
        <label>In-Hands Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Isassignto_loggedinuser__c</fullName>
        <formula>If(Designer__c = $User.FirstName + &apos; &apos; + $User.LastName,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Isassignto loggedinuser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Part_Number__c</fullName>
        <label>Manufacturer Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Address_Id__c</fullName>
        <label>Order Address Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Shipping Address</label>
        <referenceTo>Shipping_Address__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Range_per_Item__c</fullName>
        <label>Price Range per Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_File_Upload_Link_Formula__c</fullName>
        <description>Field to take URL from Product file Upload field (populated via Integration)</description>
        <formula>HYPERLINK( Product_File_Upload__c, Product_File_Upload__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product File Upload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_File_Upload__c</fullName>
        <description>Created to store Link of file uploaded location</description>
        <label>Product File Upload</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Tax_Code__c</fullName>
        <label>Product Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectGroup_Assigned_To_Email__c</fullName>
        <description>Project Group Assigned to User Email Id to be stamp on Project Object</description>
        <label>ProjectGroup Assigned To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Delivery_Date__c</fullName>
        <label>Project Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Group_Assigned_to__c</fullName>
        <formula>Project_Group__r.Assigned_To__r.FirstName+&apos; &apos;+Project_Group__r.Assigned_To__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Group Assigned to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group_Campaign__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Project_Group__r.Campaign__r.Id, Project_Group__r.Campaign__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Group Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group_Status__c</fullName>
        <formula>Text( Project_Group__r.Status__c )</formula>
        <label>Project Group Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Group</label>
        <referenceTo>Project_Group__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Kickoff_Date__c</fullName>
        <label>Project Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Sub_Type__c</fullName>
        <label>Project Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Creative</fullName>
                </value>
                <value>
                    <fullName>Template Creative</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Preorder</fullName>
                </value>
                <value>
                    <fullName>Custom Fulfillment</fullName>
                    <isActive>false</isActive>
                    <label>Custom Fulfillment</label>
                </value>
                <value>
                    <fullName>Tradeshow Booth</fullName>
                    <isActive>false</isActive>
                    <label>Tradeshow Booth</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_Date_Requested__c</fullName>
        <label>Proof Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retailer_Logo_to_Include__c</fullName>
        <description>If creating project, attach file on project record, not in edit mode</description>
        <inlineHelpText>If creating project, attach file on project record, not in edit mode</inlineHelpText>
        <label>Retailer Logo to Include</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant__c</fullName>
        <formula>Project_Group__r.Sales_Consultant_New__r.FirstName  + &apos; &apos; + Project_Group__r.Sales_Consultant_New__r.LastName</formula>
        <label>Sales Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Tracking_Number__c</fullName>
        <label>Shipment Tracking Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method_Test__c</fullName>
        <label>Shipping Method</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_Option__c</fullName>
        <label>Size Option</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_Type__c</fullName>
        <description>Mens, Womens, Youth, Unisex</description>
        <inlineHelpText>Mens, Womens, Youth, Unisex</inlineHelpText>
        <label>Size Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Call_to_Action__c</fullName>
        <label>Special Call to Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Wildlife</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Nutrena Full Farm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>P Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substrate__c</fullName>
        <label>Substrate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Audience_Segment__c</fullName>
        <label>Target Audience/Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Excluding_Tax__c</fullName>
        <label>Total Excluding Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Milestones_Complete__c</fullName>
        <label>Total Milestones Complete</label>
        <summaryFilterItems>
            <field>Milestone__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Milestones__c</fullName>
        <label>Total Milestones</label>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_of_Apparel__c</fullName>
        <description>Performance T-Shirt, Cotton Poly T-Shirt, Performance Polo, Cotton Polo, Long Sleeve Button Down, Short Sleeve Button Down, Vest, Hooded Sweatshirt, Pullover, Heavy Outwerar, Windbreaker, Shoft Shell Jacket</description>
        <inlineHelpText>Performance T-Shirt, Cotton Poly T-Shirt, Performance Polo, Cotton Polo, Long Sleeve Button Down, Short Sleeve Button Down, Vest, Hooded Sweatshirt, Pullover, Heavy Outwerar, Windbreaker, Shoft Shell Jacket</inlineHelpText>
        <label>Type of Apparel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Hat__c</fullName>
        <description>Flex Fit Unstructured, Cotton Mesh Structured, Cotton Mesh Unstructured, Cotton Twill Structured, Cotton Twill Unstructured, Soft Mesh Trucker Structured, Soft Mesh Trucker Unstructured</description>
        <inlineHelpText>Flex Fit Unstructured, Cotton Mesh Structured, Cotton Mesh Unstructured, Cotton Twill Structured, Cotton Twill Unstructured, Soft Mesh Trucker Structured, Soft Mesh Trucker Unstructured</inlineHelpText>
        <label>Type of Hat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_do_we_want_the_audience_to_do__c</fullName>
        <label>Follow up questions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_competition_doing__c</fullName>
        <label>What is the competition doing?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_products_are_we_selling__c</fullName>
        <label>What products are we selling?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>In_Hands_Date_Requested__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Designer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CFR_CouponPodQueue_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>CFR_CouponPodQueue</label>
        <queue>CFR_CouponPodQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coupon_Pod_Project</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>Completed_Milestones__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>BC_Customer_Group__c</columns>
        <columns>In_Hands_Date_Requested__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Project_Group_Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Delayed</value>
        </filters>
        <label>Coupon Pod</label>
        <language>en_US</language>
        <queue>Coupon_Pod</queue>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Creative_Pod_Project</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>Proof_Date_Requested__c</columns>
        <columns>In_Hands_Date_Requested__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Custom,Project__c.Standard</value>
        </filters>
        <filters>
            <field>Project_Group_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Creative Pod</label>
        <language>en_US</language>
        <queue>Creative_Pod</queue>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fulfillment_Pod_Project</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>In_Hands_Date_Requested__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Manufacturer_Part_Number__c</columns>
        <columns>SKU__c</columns>
        <columns>Size_Option__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Standard</value>
        </filters>
        <label>Fulfillment Pod</label>
        <language>en_US</language>
        <queue>Fulfillment_Pod</queue>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Completed_Projects</fullName>
        <columns>NAME</columns>
        <columns>BCOrderId__c</columns>
        <columns>Customer__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Group_Status__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete,Cancelled</value>
        </filters>
        <label>My Completed Projects</label>
        <language>en_US</language>
        <sharedTo>
            <role>Marketing_Coordinator</role>
            <role>Marketing_Invoicer</role>
            <role>Marketing_Manager</role>
            <role>Marketing_Team_Member</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Design_Projects</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>Proof_Date_Requested__c</columns>
        <columns>In_Hands_Date_Requested__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Completed_Milestones__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Isassignto_loggedinuser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Project_Group_Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Delayed</value>
        </filters>
        <label>My Design Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>In_Hands_Date_Requested__c</columns>
        <columns>Completed_Milestones__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Delayed</value>
        </filters>
        <label>My Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Preorder1</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>BCOrderId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Sub_Type__c</field>
            <operation>equals</operation>
            <value>Preorder</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Standard</value>
        </filters>
        <label>Preorder1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Print_this_file</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Status__c</columns>
        <columns>SKU__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor_Name__c</field>
            <operation>equals</operation>
            <value>Print This File</value>
        </filters>
        <label>Print This File</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Scioto_Sign_Projects</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Status__c</columns>
        <columns>SKU__c</columns>
        <columns>Product_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor_Name__c</field>
            <operation>equals</operation>
            <value>Scioto</value>
        </filters>
        <label>Scioto Sign Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tradeshow_Pod_Project</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Consultant__c</columns>
        <columns>Project_Group__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <columns>Project_Kickoff_Date__c</columns>
        <columns>Completed_Milestones__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Project_Group_Campaign__c</columns>
        <columns>BC_Customer_Group__c</columns>
        <columns>In_Hands_Date_Requested__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Project_Group_Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Delayed</value>
        </filters>
        <label>Tradeshow Pod</label>
        <language>en_US</language>
        <queue>Tradeshow_Pod</queue>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Custom</fullName>
        <active>true</active>
        <description>Use this Record Type when creating new Custom type Projects(Custom Creative, Coupon)</description>
        <label>Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>false</active>
        <description>Use this Record type when creating a new Event Project (such as Tradeshow,Sponsorship, Meeting)</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Use this Record Type when creating new Standard type Projects (Fulfillment, Template Creative, Tradeshow)</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Project_Group_should_be_same</fullName>
        <active>true</active>
        <description>Project Group should be same for project and order shipping address.</description>
        <errorConditionFormula>AND( NOT(ISBLANK(Order_Shipping_Address__c)), Project_Group__c &lt;&gt; Order_Shipping_Address__r.Project_Group__c)</errorConditionFormula>
        <errorMessage>Project and Order shipping address should be belong to same Project Group</errorMessage>
    </validationRules>
</CustomObject>